# Bostonia

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
apps/web/: Dockerfile  next.config.js  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/lib/: api.ts  (+4 more)
claude-boilerplate-main/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SKILLS_SUMMARY.md
claude-boilerplate-main/.claude/: REQUIREMENT-CONFORMANCE-FRAMEWORK.md  project-preferences.md  settings.json
claude-boilerplate-main/.claude/agents/: AUTO-ACTIVATION.md  README.md  agent-rules.json
claude-boilerplate-main/.claude/commands/: deploy.md  review.md  test.md
claude-boilerplate-main/.claude/docs/: HYBRID_AGENT_STRATEGY.md
claude-boilerplate-main/.claude/hooks/: agent-activation-prompt  debug-agent-activation  post-tool-use-tracker  requirement-conformance-check  skill-activation-prompt
claude-boilerplate-main/.claude/skills/: README.md  skill-rules.json
docs/: BUSINESS_MODEL.md  COMPETITIVE_ANALYSIS.md  DEVELOPMENT_ROADMAP.md  FEATURE_SPECS.md  FRAUD_DETERRENCE_FRAMEWORK.md  IMPLEMENTATION_PLAN.md  PRD.md  README.md  TECHNICAL_ARCHITECTURE.md
docs/api/: GETTING_STARTED.md  VERSIONING.md  auth-api.yaml  character-api.yaml  chat-api.yaml  forum-api.yaml  fraud-protection.openapi.yaml  payment-api.yaml
docs/architecture/: COMMUNITY_FORUMS.md  FRAUD_DETECTION_SUMMARY.md  WHITE_LABEL.md  fraud-detection-system.md
infrastructure/docker/: init-db.sql
services/ai-orchestration/: Dockerfile  pyproject.toml
services/ai-orchestration/src/: __init__.py  config.py  main.py
services/ai-orchestration/src/routes/: chat.py  health.py
services/analytics-service/: ARCHITECTURE.md  package.json  tsconfig.json
services/analytics-service/src/: index.ts
services/auth-service/: Dockerfile  package.json  tsconfig.json
services/auth-service/src/: app.ts  index.ts
services/character-service/: package.json
services/character-service/src/: index.ts
services/chat-service/: package.json  tsconfig.json
services/chat-service/src/: index.ts
services/content-moderation/: Dockerfile  pyproject.toml
services/content-moderation/src/: __init__.py  config.py  main.py
services/content-moderation/src/routes/: health.py  moderation.py
services/fraud-service/: package.json  tsconfig.json
services/fraud-service/src/: index.ts
services/memory-service/: Dockerfile  pyproject.toml
services/memory-service/src/: config.py  main.py
services/memory-service/src/routes/: health.py  memory.py
services/payment-service/: package.json
services/payment-service/src/: app.ts  index.ts
services/user-service/: package.json
services/user-service/src/: index.ts
(+137 files in other folders)
